# portia-fastapi-template

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  exceptions.py  main.py
app/api/: health.py  run.py
app/schemas/: health.py  run.py
app/services/: portia_service.py
tests/: conftest.py  test_api_health.py  test_api_run.py  test_config.py  test_exceptions.py  test_main.py  test_schemas.py  test_services.py
